--- a/views/questionnaires/questionnairesCreate.pug
+++ b/views/questionnaires/questionnairesCreate.pug
@@ -9,6 +9,26 @@ block content
       label.col-md-3.col-form-label.font-weight-bold.text-right(for='name') Name
       .col-md-7
         input.form-control(type='name', name='name', id='name', placeholder='Name', autofocus, autocomplete='name', required)
+    .form-group.row
+      label.col-md-3.col-form-label.font-weight-bold.text-right(for='question') Question
+      .col-md-7
+        input.form-control(type='question', question='question', id='question', placeholder='question', autofocus, autocomplete='question', required)
+    .form-group.row
+      label.col-md-3.col-form-label.font-weight-bold.text-right(for='answer1') Wrong Answer
+      .col-md-7
+        input.form-control(type='answer1', answer1='answer1', id='answer1', placeholder='answer1', autofocus, autocomplete='answer1', required)
+    .form-group.row
+      label.col-md-3.col-form-label.font-weight-bold.text-right(for='answer2') Correct Answer
+      .col-md-7
+        input.form-control(type='answer2', answer2='answer2', id='answer2', placeholder='answer2', autofocus, autocomplete='answer2', required)
+    .form-group.row
+      label.col-md-3.col-form-label.font-weight-bold.text-right(for='answer3') Correct Answer
+      .col-md-7
+        input.form-control(type='answer3', answer3='answer3', id='answer3', placeholder='answer3', autofocus, autocomplete='answer3', required)
+    .form-group.row
+      label.col-md-3.col-form-label.font-weight-bold.text-right(for='answer4') Correct Answer
+      .col-md-7
+        input.form-control(type='answer4', answer4='answer4', id='answer4', placeholder='answer4', autofocus, autocomplete='answer4', required)
     .form-group.offset-sm-3.col-md-7.pl-2
       button.btn.btn-success(type='submit')
         i.fas.fa-plus.fa-sm
